# logic/Layer_manager_gw_graphQL/Schema/layer_manager_gw_schema.py
@@ -34,13 +34,7 @@ class GeometryType(sgqlc.types.Enum):
     __choices__ = ('Point', 'LineString', 'Polygon', 'MultiPoint', 'MultiLineString', 'MultiPolygon')
 
 
-ID = sgqlc.types.ID
-
 Int = sgqlc.types.Int
-
-class JSON(sgqlc.types.Scalar):
-    __schema__ = layer_manager_gw_schema
-
 
 class JSONObject(sgqlc.types.Scalar):
     __schema__ = layer_manager_gw_schema
@@ -62,11 +56,11 @@ class Upload(sgqlc.types.Scalar):
 ########################################################################
 class Entity(sgqlc.types.Type):
     __schema__ = layer_manager_gw_schema
-    __field_names__ = ('id', 'name', 'type', 'timestamp', 'geo_data')
-    id = sgqlc.types.Field(sgqlc.types.non_null(ID), graphql_name='id')
+    __field_names__ = ('id', 'name', 'type', 'updated_at', 'geo_data')
+    id = sgqlc.types.Field(sgqlc.types.non_null(String), graphql_name='id')
     name = sgqlc.types.Field(sgqlc.types.non_null(String), graphql_name='name')
     type = sgqlc.types.Field(sgqlc.types.non_null(String), graphql_name='type')
-    timestamp = sgqlc.types.Field(DateTime, graphql_name='timestamp')
+    updated_at = sgqlc.types.Field(DateTime, graphql_name='updatedAt')
     geo_data = sgqlc.types.Field('GeoData', graphql_name='geoData')
 
 
@@ -86,19 +80,20 @@ class Geometry(sgqlc.types.Type):
 class Layer(sgqlc.types.Type):
     __schema__ = layer_manager_gw_schema
     __field_names__ = ('id', 'name', 'entities')
-    id = sgqlc.types.Field(sgqlc.types.non_null(ID), graphql_name='id')
+    id = sgqlc.types.Field(String, graphql_name='id')
     name = sgqlc.types.Field(sgqlc.types.non_null(String), graphql_name='name')
-    entities = sgqlc.types.Field(sgqlc.types.list_of(Entity), graphql_name='entities')
+    entities = sgqlc.types.Field(sgqlc.types.list_of(Entity), graphql_name='entities', args=sgqlc.types.ArgDict((
+        ('since', sgqlc.types.Arg(DateTime, graphql_name='since', default=None)),
+        ('bbox', sgqlc.types.Arg(sgqlc.types.list_of(Float), graphql_name='bbox', default=None)),
+))
+    )
 
 
 class Query(sgqlc.types.Type):
     __schema__ = layer_manager_gw_schema
-    __field_names__ = ('get_layers', 'get_layers_and_entities')
-    get_layers = sgqlc.types.Field(sgqlc.types.list_of(Layer), graphql_name='getLayers')
-    get_layers_and_entities = sgqlc.types.Field(sgqlc.types.non_null(sgqlc.types.list_of(Layer)), graphql_name='getLayersAndEntities', args=sgqlc.types.ArgDict((
-        ('layers', sgqlc.types.Arg(sgqlc.types.list_of(String), graphql_name='layers', default=None)),
-        ('since', sgqlc.types.Arg(DateTime, graphql_name='since', default=None)),
-        ('bbox', sgqlc.types.Arg(sgqlc.types.list_of(Float), graphql_name='bbox', default=None)),
+    __field_names__ = ('get_layers',)
+    get_layers = sgqlc.types.Field(sgqlc.types.list_of(Layer), graphql_name='getLayers', args=sgqlc.types.ArgDict((
+        ('layer_ids', sgqlc.types.Arg(sgqlc.types.list_of(String), graphql_name='layerIds', default=None)),
 ))
     )
 
@@ -122,7 +117,7 @@ class FeatureGeoData(sgqlc.types.Type, GeoData):
 ########################################################################
 
 ########################################################################
-# layer_manager_gw_schema Entry Points
+# Schema Entry Points
 ########################################################################
 layer_manager_gw_schema.query_type = Query
 layer_manager_gw_schema.mutation_type = None
